force-app/main/default/objects/Inventory__c/fields/Web_Payment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Web_Payment_Formula__c</fullName>
    <formula>(
		(Web_Price__c -  Web_Down_Payment__c) 
		* Web_Interest_Rate__c/1200 
		* ((1+Web_Interest_Rate__c/1200)^VALUE(LEFT(TEXT(Web_Term__c), 1))*12)
	) 

	/ 

	(
		((1+Web_Interest_Rate__c/1200)^VALUE(LEFT(TEXT(Web_Term__c), 1))*12)-1
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>