force-app/main/default/objects/Inventory__c/fields/Web_Price__c.field-meta.xml
<CustomField>
    <fullName>Web_Price__c</fullName>
    <label>Web Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>