force-app/main/default/objects/Inventory__c/fields/Web_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Product_ID__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Product ID</label>
    <type>Text</type>
</CustomField>