force-app/main/default/objects/Inventory__c/fields/Web_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Product_Name__c</fullName>
    <description>This is the Name of the Product for the Web</description>
    <label>Web Product Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>