force-app/main/default/objects/Inventory__c/fields/Web_Propulsion__c.field-meta.xml
<CustomField>
    <fullName>Web_Propulsion__c</fullName>
    <label>Web Propulsion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V-drive</fullName>
            </value>
            <value>
                <fullName>Inboard</fullName>
            </value>
            <value>
                <fullName>Stern Drive</fullName>
            </value>
            <value>
                <fullName>Jet Drive</fullName>
            </value>
            <value>
                <fullName>Outboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>