force-app/main/default/objects/Inventory__c/fields/Web_Status__c.field-meta.xml
<CustomField>
    <fullName>Web_Status__c</fullName>
    <label>Web Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
            <value>
                <fullName>New Arrival</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>One-Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>