force-app/main/default/objects/Inventory__c/fields/Web_Term__c.field-meta.xml
<CustomField>
    <fullName>Web_Term__c</fullName>
    <label>Web Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 years</fullName>
            </value>
            <value>
                <fullName>10 years</fullName>
            </value>
            <value>
                <fullName>12 years</fullName>
            </value>
            <value>
                <fullName>15 years</fullName>
            </value>
            <value>
                <fullName>20 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>