force-app/main/default/objects/Inventory__c/fields/Web_width__c.field-meta.xml
<CustomField>
    <fullName>Web_width__c</fullName>
    <label>Web Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>