force-app/main/default/objects/Inventory__c/fields/Web_Year__c.field-meta.xml
<CustomField>
    <fullName>Web_Year__c</fullName>
    <formula>Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Year</label>
    <type>Text</type>
</CustomField>