force-app/main/default/objects/Inventory__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Website_Value_Set</valueSetName>
    </valueSet>
</CustomField>