force-app/main/default/objects/Inventory__c/fields/Website_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Website_Page_Name__c</fullName>
    <label>Website Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>