force-app/main/default/objects/Inventory__c/fields/Window_Sticker_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Window_Sticker_Down_Payment__c</fullName>
    <label>Window Sticker Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>