force-app/main/default/objects/Inventory__c/fields/Window_Sticker_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Window_Sticker_Interest_Rate__c</fullName>
    <label>Window Sticker Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>