force-app/main/default/objects/Inventory__c/fields/Window_Sticker_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Window_Sticker_MSRP__c</fullName>
    <label>Window Sticker MSRP</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>