force-app/main/default/objects/Inventory__c/fields/Window_sticker_Term__c.field-meta.xml
<CustomField>
    <fullName>Window_sticker_Term__c</fullName>
    <label>Window sticker Term</label>
    <length>18</length>
    <type>Text</type>
</CustomField>