force-app/main/default/objects/Inventory__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Specifies the year of product</description>
    <label>Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>