force-app/main/default/objects/Inventory__c/recordTypes/Engine.recordType-meta.xml
<RecordType>
    <fullName>Engine</fullName>
    <active>true</active>
    <label>Engine</label>
</RecordType>