force-app/main/default/objects/Inventory__c/recordTypes/Inventory_for_Parts.recordType-meta.xml
<RecordType>
    <fullName>Inventory_for_Parts</fullName>
    <active>true</active>
    <label>Inventory for Parts</label>
</RecordType>