force-app/main/default/objects/Inventory__c/recordTypes/New_Boats.recordType-meta.xml
<RecordType>
    <fullName>New_Boats</fullName>
    <active>true</active>
    <description>This record type stores the details of the new boats.</description>
    <label>New Boats</label>
</RecordType>