force-app/main/default/objects/Inventory__c/recordTypes/Trolling_Motor.recordType-meta.xml
<RecordType>
    <fullName>Trolling_Motor</fullName>
    <active>true</active>
    <label>Trolling Motor</label>
</RecordType>