force-app/main/default/objects/Inventory__c/recordTypes/Used_Boats.recordType-meta.xml
<RecordType>
    <fullName>Used_Boats</fullName>
    <active>true</active>
    <description>This record type stores the details of the used boats.</description>
    <label>Used Boats</label>
</RecordType>