force-app/main/default/objects/Inventory__c/validationRules/Date_First_on_Sales_Lot_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_First_on_Sales_Lot_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Date_First_on_Sales_Lot__c &gt;TODAY()</errorConditionFormula>
    <errorDisplayField>Date_First_on_Sales_Lot__c</errorDisplayField>
    <errorMessage>Date First on Sales Lot Cannot be a future date.</errorMessage>
</ValidationRule>