force-app/main/default/objects/Inventory__c/validationRules/Part_Number_Required_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Part_Number_Required_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.Name = &apos;Inventory for Parts&apos;) &amp;&amp;  ISBLANK(Part_Number__c )</errorConditionFormula>
    <errorMessage>Part Number is Mandatory</errorMessage>
</ValidationRule>