force-app/main/default/objects/Inventory__c/validationRules/Vendor_Name_Mandatory_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Name_Mandatory_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = &apos;Inventory for Parts&apos; &amp;&amp; ISBLANK( Vendor__c )</errorConditionFormula>
    <errorDisplayField>Vendor__c</errorDisplayField>
    <errorMessage>Selecting a Vendor is mandatory for this record type.</errorMessage>
</ValidationRule>