force-app/main/default/objects/Inventory__c/listViews/All_Inventory_in_List.listView-meta.xml
<ListView>
    <fullName>All_Inventory_in_List</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Quantity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Web_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Inventory in List</label>
</ListView>