force-app/main/default/objects/Inventory__c/listViews/Inventory_for_Parts.listView-meta.xml
<ListView>
    <fullName>Inventory_for_Parts</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Quantity__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Inventory_for_Parts</value>
    </filters>
    <label>Inventory for Parts</label>
</ListView>