force-app/main/default/objects/Inventory__c/listViews/Inventory_List.listView-meta.xml
<ListView>
    <fullName>Inventory_List</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Inventory_for_Parts</value>
    </filters>
    <label>Inventory List</label>
</ListView>