force-app/main/default/objects/Inventory__c/listViews/Part_Inventory_List.listView-meta.xml
<ListView>
    <fullName>Part_Inventory_List</fullName>
    <columns>NAME</columns>
    <columns>Part_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quantity__c</columns>
    <columns>Vendor__c</columns>
    <columns>Part__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Inventory_for_Parts</value>
    </filters>
    <label>Part Inventory List</label>
</ListView>