force-app/main/default/objects/Inventory__c/listViews/Service_Queue_Inventory.listView-meta.xml
<ListView>
    <fullName>Service_Queue_Inventory</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Queue</label>
    <queue>Service_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>