force-app/main/default/objects/Inventory__c/listViews/Test_View.listView-meta.xml
<ListView>
    <fullName>Test_View</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Year__c</columns>
    <columns>Model__c</columns>
    <columns>Model_Variant__c</columns>
    <columns>HIN_Number__c</columns>
    <columns>Stage__c</columns>
    <columns>Dealer_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.New_Boats</value>
    </filters>
    <filters>
        <field>Days_on_Lot__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Test View</label>
</ListView>