force-app/main/default/objects/Inventory__c/listViews/Trailer_Inventory_List.listView-meta.xml
<ListView>
    <fullName>Trailer_Inventory_List</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Year__c</columns>
    <columns>Model__c</columns>
    <columns>Model_Variant__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_MSRP_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Trailer</value>
    </filters>
    <label>Trailer Inventory List</label>
</ListView>