force-app/main/default/objects/Inventory__c/listViews/Used_Boat_Inventory_List.listView-meta.xml
<ListView>
    <fullName>Used_Boat_Inventory_List</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Year__c</columns>
    <columns>Model__c</columns>
    <columns>Model_Variant__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_MSRP_Price__c</columns>
    <columns>UsedBoatStatus__c</columns>
    <columns>Used_Boat_HRS__c</columns>
    <columns>ACV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.Used_Boats</value>
    </filters>
    <label>Used Boat Inventory List</label>
</ListView>